--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 body {
   background: #f5f5f5;
@@ -30,7 +31,7 @@ section h3 {
   margin-bottom: 20px;
 }
 .wrapper {
-  max-width: 1080px;
+  max-width: 960px;
   margin: 0 auto;
   background: #fff;
   box-shadow: 10px 10px 8px #ccc;
@@ -42,12 +43,12 @@ section h3 {
   justify-content: space-between;
 }
 aside {
-  width: 20%;
+  width: 29%;
   background: #FFDEAD;
   padding: 4% 3%;
 }
 section {
-  width: 75%;
+  width: 70%;
   padding: 4% 0;
 }
 article {
@@ -79,23 +80,3 @@ section li span {
 .fe-dev {
   margin-bottom: 40px;
 }
-/*section p {
-    margin: 0;
-  }
-  
- 
-  .name {
-    margin: 15px 0;
-  }
-  .subtitle {
-    display: inline-block;
-    margin: 0 0 5px;
-  }
-  .divider {
-    border-top: 1px solid #bbb;
-    margin: 30px 5px;
-  }
-  
-  ol li {
-    font-weight: normal;
-  } */
